--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "frontend",
+    "name": "TA$KS",
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./src/assets/Logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "image": "./src/assets/Background.png",  
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
