--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,7 +4,7 @@
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/Logo.png",
+    "icon": "./src/assets/Launcher_Icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./src/assets/Background.png",  
