--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@eliav2/react-native-collapsible-view": "^1.4.0",
-    "@expo/webpack-config": "^0.17.0",
+    "@expo/webpack-config": "^0.17.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.0.0",
     "expo": "~46.0.9",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.69.5",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
