--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,10 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
-
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.1.0",
     "expo": "~46.0.13",
     "expo-dev-client": "~1.3.0",
-    "@reduxjs/toolkit": "^1.8.5",
     "expo-linear-gradient": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -27,8 +26,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-axios": "^2.0.6",
-    "react-native": "0.69.6",
     "react-dom": "^18.2.0",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-nested-selects": "^1.0.2",
     "react-native-safe-area-context": "4.3.1",
@@ -40,5 +39,6 @@
     "@babel/core": "^7.12.9",
     "tailwindcss": "^3.1.8"
   },
+  "resolutions": { "metro": "0.70.3" } ,
   "private": true
 }
