--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.2",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.1.0",
     "expo": "~46.0.13",
@@ -30,6 +31,7 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-nested-selects": "^1.0.2",
+    "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
@@ -39,6 +41,8 @@
     "@babel/core": "^7.12.9",
     "tailwindcss": "^3.1.8"
   },
-  "resolutions": { "metro": "0.70.3" } ,
+  "resolutions": {
+    "metro": "0.70.3"
+  },
   "private": true
 }
