--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "expo": "~46.0.9",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.12.1",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-dom": "18.0.0",
