--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,24 +19,26 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.1.0",
     "expo": "~46.0.13",
-    "expo-dev-client": "~1.3.0",
+    "expo-dev-client": "~1.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
-    "nativewind": "^2.0.11",
-    "react-dom": "18.0.0",
     "formik": "^2.2.9",
+    "nativewind": "^2.0.11",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-axios": "^2.0.6",
+    "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-nested-selects": "^1.0.2",
+    "react-native-paystack-webview": "^4.0.3",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
     "react-redux": "^8.0.4",
     "yup": "^0.32.11"
   },
