--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.0",
     "expo": "~46.0.13",
     "expo-dev-client": "~1.3.1",
+    "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
